codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__mcp_server_elicitation__tests__mcp_server_elicitation_boolean_form.snap
---
source: tui/src/bottom_pane/mcp_server_elicitation.rs
expression: "render_snapshot(&overlay, Rect::new(0, 0, 120, 16))"
---
                                                                                                                        
  Field 1/1 (1 required unanswered)                                                                                     
  Allow this request?                                                                                                   
                                                                                                                        
  Confirm                                                                                                               
  Approve the pending action.                                                                                           
  ❯ 1. True                                                                                                             
    2. False                                                                                                            
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
  enter to submit | esc to cancel
